--- a/SocialMedia-Clone/appsettings.json
+++ b/SocialMedia-Clone/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "con" : "Host=localhost; Database = brainrot3; Username=postgres; Password = 2201"
+    "con" : "<ConnectionStringHere>"
   }
 }
